# agentguard

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/: dlp_rules.yaml  policies.yaml
docs/: architecture.md  docker-mirror.md  quickstart.md  课程报告.md  面向自主 AI Agent 的零信任安全网关架构.md
examples/dashboard/: server.py
examples/dashboard/static/: app.js  index.html  styles.css
examples/demo_agent/: _shared.py  demo_dlp.py  demo_hitl.py  demo_injection.py  demo_payload_splitting.py  demo_retry_storm.py  demo_sql_drop.py
examples/mock_approval_console/: server.py
examples/mock_backend/: server.py
scripts/: demo.sh  try.sh
src/agentguard/: __init__.py  events.py  events_api.py  main.py  models.py  proxy.py  settings.py
src/agentguard/cel/: __init__.py  engine.py
src/agentguard/hitl/: __init__.py  approval_api.py  webhook.py
src/agentguard/middleware/: __init__.py  cel_policy.py  hitl.py  idempotency.py  payload_sanitizer.py
src/agentguard/storage/: __init__.py  hitl_registry.py  redis_store.py
tests/: conftest.py  test_cel_policy.py  test_e2e_demos.py  test_events_bus.py  test_hitl_flow.py  test_idempotency.py  test_payload_sanitizer.py
